# script_tests

./: .gitignore  CHECK_DONE.md  CLAUDE.md  README.md  TODO.md  builder.py  chronos.py  chronos_v3.html  chronos_v4.html  context_switcher.py  ghost-typist.py  localize_libs.py  midnight-marina.css  nexus_app.py  nexus_search.py  pyproject.toml  qwebchannel.js  regex-helper.py  requirements.txt  ruff.toml  run.ps1  schedule.bat  schedule_hidden.vbs  search_engine.py  setup.sh  xexplorer.py
.agents/rules/: ruff.md
.claude/: settings.local.json
assets/: codenames.txt
src/archiver/: __main__.py  archiver.py  backend.py
src/base64_tool/: base64_tool.py
src/chronos/: bridge.py  chronos.css  chronos.py  chronos_v4.html  db.py  localize_libs.py  lucide.min.js  midnight-marina.css
src/chronos/js/: aichat_page.js  analytics_page.js  app.js  history_page.js  settings_page.js  shared.js  tasks_page.js  utils.js  worldclock_page.js
src/clipboard_manager/: __main__.py  bridge.py  clipboard_manager.css  clipboard_manager.html  clipboard_manager.py  settings.py  watcher.py
src/clipboard_manager/js/: app.js  bridge.js
src/color_picker/: color_picker.py  theme_template.py  ui_components.py
src/common/: config.py  monitor_ctrl.py  search_engine.py  theme.py  theme_template.py  web_app_window.py
src/env_var_explorer/: __main__.py  env_var_explorer.py  registry.py  style.py  widgets.py
src/file_ops/: __main__.py  bridge.py  file_ops.css  file_ops.html  file_ops.py
src/file_ops/js/: app.js
src/ghost_typist/: __init__.py  __main__.py  bridge.py  db.py  ghost_typist.css  ghost_typist.html  ghost_typist.py  watcher.py
src/ghost_typist/js/: app.js
src/hash_tool/: __main__.py  bridge.py  hash_tool.css  hash_tool.html  hash_tool.py
src/hash_tool/js/: app.js
src/img_to_text/: __init__.py  _capture.py  _colors.py  _dialogs.py  _overlay.py  _settings.py  _toast.py  _worker.py  extractor.py  gui.py  ocr_worker.py
src/ip_calculator/: ip_calculator.py
src/nexus/: __init__.py  __main__.py  _data_mixin.py  _launch_mixin.py  _results_mixin.py  _search_mixin.py  _ui_mixin.py  app.py  hotkeys.py  img_to_text.py  monitor_overlay.py  search.py  system_commands.py  theme_picker_popup.py  themes.py  tray.py  utils.py  widgets.py
src/port_inspector/: __main__.py  port_inspector.py
src/regex_helper/: regex_helper.py
src/sqlite_viewer/: __main__.py  bridge.py  sqlite_viewer.css  sqlite_viewer.html  sqlite_viewer.py
src/sqlite_viewer/js/: app.js
src/text_summarizer/: __init__.py  algorithms.py  bridge.py  gui.py
src/text_summarizer/web/: index.html  script.js  style.css
src/theme/: midnight-marina-palette.css  midnight-marina-vars.css  midnight-marina.css
src/themes/catppuccin-mocha/: theme.json
src/themes/dracula/: theme.json
src/themes/forest-dreams/: theme.json
src/themes/gruvbox-dark/: theme.json
src/themes/lavender-fields/: theme.json
src/themes/light/: theme.json
src/themes/midnight-marina/: midnight-marina-palette.css  midnight-marina-vars.css  theme.json
src/themes/midnight-marina-deep/: theme.json
src/themes/nord/: theme.json
src/themes/ocean-breeze/: theme.json
src/themes/rose-pine-dawn/: theme.json
src/themes/sunset-bliss/: theme.json
src/themes/synthwave-84/: theme.json
src/themes/tokyo-night/: theme.json
src/window_manager/: __main__.py  window_manager.py
src/workspace_manager/: __main__.py  bridge.py  workspace_manager.css  workspace_manager.html  workspace_manager.py
src/workspace_manager/js/: app.js
src/xexplorer/: bridge.py  database.py  delegates.py  icons.py  indexer.py  theme.py  watcher.py  widgets.py  xexplorer.css  xexplorer.html  xexplorer.py
src/xexplorer/js2/: app.js  bridge.js
src/xexplorer/js2/components/: icons.js  (+7 more)
