[project]
name = "fast-explorer"
version = "2.0.0"
description = "A fast launcher and file indexer intended for god damn slow Windows explorer devices on which python pip packages is only runabel option. Else it would be written in rust"
authors = [
    { name = "Muddyblack" }
]
dependencies = [
    "PyQt6",
    "PyQt6-WebEngine",
    "keyboard",
    "watchdog",
    "easyocr",
    "pymupdf",
    "python-pptx",
    "python-docx",
    "openpyxl",
    "psutil",
    #"pywin32; sys_platform == \"win32\"",  # disabled as pywin32 not wanted to be installed.
    "pynput; sys_platform != \"win32\"",
]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
nexus = "src.nexus.app:main"
regex-helper = "src.regex_helper.regex_helper:main"
file-ops = "src.file_ops.file_ops:main"
archiver = "src.file_ops.file_ops:main_archiver"
clipboard-manager = "src.clipboard_manager.clipboard_manager:main"
port-inspector = "src.port_inspector.port_inspector:main"
hash-tool = "src.hash_tool.hash_tool:main"
ghost-typist = "src.ghost_typist.ghost_typist:main"
xexplorer = "src.xexplorer.xexplorer:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
